# uevr-mcp

./: .gitignore  .mcp.json  AGENT.md  README.md  UEVR_GUIDE.md
.claude/skills/: uevr-mcp-testing.md
mcp-server/: DumpTools.cs  Dumper7Tools.cs  ExternalTools.cs  Http.cs  Injector.cs  MemoryWriteTools.cs  Pipe.cs  Program.cs  ReadinessTools.cs  ReverseEngineeringTools.cs  SetupTools.cs  StabilityTools.cs  Tools.cs  UevrMcpServer.csproj  UhtSdkTools.cs
plugin/: CMakeLists.txt  cmake.toml
plugin/src/: event_bus.cpp  event_bus.h  game_thread_queue.cpp  game_thread_queue.h  http_server.cpp  http_server.h  json_helpers.cpp  json_helpers.h  main.cpp  pipe_server.cpp  pipe_server.h
plugin/src/hook/: hook_registry.cpp  hook_registry.h
plugin/src/lua/: lua_engine.cpp  lua_engine.h
plugin/src/reflection/: function_caller.cpp  function_caller.h  kismet_disasm.cpp  object_explorer.cpp  object_explorer.h  object_registry.cpp  object_registry.h  property_probes.cpp  property_probes.h  property_reader.cpp  property_reader.h  property_writer.cpp  property_writer.h
plugin/src/routes/: animation_routes.cpp  animation_routes.h  asset_routes.cpp  asset_routes.h  blueprint_routes.cpp  blueprint_routes.h  console_routes.cpp  console_routes.h  discovery_routes.cpp  discovery_routes.h  explorer_routes.cpp  explorer_routes.h  hook_routes.cpp  hook_routes.h  input_routes.cpp  input_routes.h  lua_routes.cpp  lua_routes.h  macro_routes.cpp  macro_routes.h  material_routes.cpp  material_routes.h  motion_controller_routes.cpp  physics_routes.cpp  physics_routes.h  screenshot_routes.cpp  screenshot_routes.h  status_routes.cpp  status_routes.h  vr_routes.cpp  vr_routes.h  watch_routes.cpp  watch_routes.h  world_routes.cpp  world_routes.h
plugin/src/screenshot/: screenshot_capture.cpp  screenshot_capture.h
plugin/src/watch/: property_watch.cpp  property_watch.h
plugin/web/: dashboard.js  explorer.html  explorer.js  index.html  style.css
tests/: roboquest_e2e_test.sh
tests/UevrMcpTests/: HttpContractTests.cs  ToolRegistrationTests.cs  UevrMcpTests.csproj
tests/integration/: conftest.py  test_array.py  test_batch_extensions.py  test_blueprint.py  test_camera.py  test_chain.py  test_endpoint_index.py  test_game_info.py  test_lua.py  test_lua_endpoints_listed.py  test_lua_scripts.py  test_memory.py  test_new_features.py  test_player_write.py  test_singletons.py
